<resources>
    <string name="app_name">My Application</string>
    <string name="tab_browse">动态浏览</string>
    <string name="tab_message">消息</string>
    <string name="tab_follow">关注</string>
    <string name="tab_post">发布</string>
    <string name="tab_search">搜索</string>
    <string name="tab_personInfo">个人主页</string>
    <string name="tab_browse_all">所有动态</string>
    <string name="tab_browse_follow">关注的人</string>
    <string name="title_activity_share_browse_detail">动态详情</string>

    <string name="shareButton_text">发布</string>

    <string name="share_post_title_defaultText">输入标题</string>
    <string name="share_post_content_defaultText">输入内容</string>

    <string name="search_hint">搜索</string>
    <string name="search_select_type1">动态</string>
    <string name="search_select_type2">用户</string>
    <string name="search_result_text">搜索结果</string>
    <string name="search_empty_text">无</string>

    <string name="user_browse_nickName_label">用户名：</string>
    <string name="user_browse_introduction_label">简介：</string>
    <string name="check_user_info_text">个人主页</string>
    <string name="follow">关注</string>
    <string name="unfollow">取消关注</string>
    <string name="block">屏蔽</string>
    <string name="unblock">取消屏蔽</string>

    <string name="title_activity_user_share">动态</string>

    <string name="sort_by_time_text">按时间</string>
    <string name="sort_by_wave_text">按热度</string>
    <string name="sort_earliest">最早</string>
    <string name="sort_latest">最近</string>
    <string name="sort_all_text">所有人</string>
    <string name="sort_follow_text">仅关注的人</string>

    <string name="user_info_following_text">关注</string>
    <string name="user_info_block_text">屏蔽</string>
    <string name="user_info_followed_text">粉丝</string>
    <string name="user_info_share_text">动态</string>
    <string name="user_info_nickName_default">游客</string>
    <string name="user_info_introduction_default">这个人什么也没写</string>
    <string name="user_info_modify_text">修改信息</string>
    <string name="user_info_login_text">登录</string>
    <string name="user_info_logout_text">退出登录</string>
    <string name="user_info_my_comment">我的评论</string>

    <string name="comment_label">评论</string>
    <string name="floor_label">楼层</string>
    <string name="floor_show_comment_text">显示评论</string>
    <string name="floor_no_comment_text">暂无评论</string>

    <string name="title_activity_comment">评论</string>

    <string name="image_delete_text">移除</string>

    <string name="show_location_text">显示位置</string>
    <string name="not_show_location_text">不显示位置</string>

    <string name="comment_add_confirm_text">确定</string>
    <string name="comment_add_content_defaultText">输入内容</string>
    <string name="title_activity_comment_add">添加评论</string>

    <string name="message_clearAll_text">清空</string>

    <string name="title_activity_login">登录</string>
    <string name="login_to_register_text">注册用户</string>
    <string name="confirm_text">确定</string>
    <string name="login_user_hint">输入用户名</string>
    <string name="login_email_hint">输入邮箱</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_checkCode_hint">输入验证码</string>

    <string name="title_activity_register">注册</string>
    <string name="register_user_hint">输入用户名</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_email_hint">输入邮箱</string>

    <string name="select_image_text">相册</string>
    <string name="select_audio_text">音频</string>
    <string name="select_video_text">视频</string>
    <string name="add_image_text">拍照</string>
    <string name="add_audio_text">录音</string>
    <string name="add_video_text">录像</string>

    <string name="modify_self_info">修改个人信息</string>

    <string name="share_type_Text">纯文字</string>
    <string name="share_type_image">图文混合</string>
    <string name="share_type_audio">音频动态</string>
    <string name="share_type_video">视频动态</string>

    <string name="state_followed">已关注</string>

    <string name="title_activity_info_modify">个人信息修改</string>
    <string name="info_modify_profile_photo_text">修改头像</string>
    <string name="info_modify_nickName_text">昵称</string>
    <string name="info_modify_introduction_text">简介</string>
    <string name="info_modify_confirm_text">确定修改</string>

    <string name="info_modify_origin_password_text">原始密码</string>
    <string name="info_modify_password_first_input_text">新密码</string>
    <string name="info_modify_password_second_input_text">再次输入新密码</string>

    <string name="title_activity_relation_user">用户</string>
    <string name="title_activity_user_info">主页</string>

</resources>