<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordModify">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/info_modify_origin_password_text"/>
            <EditText
                android:id="@+id/info_modify_origin_password_editText"
                android:layout_width="@dimen/info_modify_input_width"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/info_modify_password_first_input_text"/>
            <EditText
                android:id="@+id/info_modify_origin_password_first_input"
                android:layout_width="@dimen/info_modify_input_width"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/info_modify_password_second_input_text"/>
            <EditText
                android:id="@+id/info_modify_origin_password_second_input"
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </LinearLayout>
        <Button
            android:id="@+id/info_modify_password_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_modify_confirm_button_marginTop"
            android:layout_gravity="center"
            android:text="@string/info_modify_confirm_text"/>
    </LinearLayout>

</FrameLayout>