<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicInfoModify">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/info_modify_profile_photo_imageView"
                    android:layout_width="@dimen/basic_info_modify_profile_photo_size"
                    android:layout_height="@dimen/basic_info_modify_profile_photo_size"
                    android:scaleType="fitCenter"/>
                <Button
                    android:id="@+id/info_modify_profile_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_modify_profile_photo_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/basic_info_modify_input_marginStart"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/info_modify_nickName_text"/>
                    <EditText
                        android:id="@+id/info_modify_nickName_editText"
                        android:layout_width="@dimen/info_modify_input_width"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLines="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/info_modify_introduction_text"/>
                    <EditText
                        android:id="@+id/info_modify_introduction_editText"
                        android:layout_width="@dimen/info_modify_input_width"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLines="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/basic_info_modify_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_modify_confirm_button_marginTop"
            android:text="@string/info_modify_confirm_text"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>