<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/login_icon_width"
                android:layout_height="wrap_content"
                android:src="@drawable/email_icon"/>
            <EditText
                android:id="@+id/login_email_input"
                android:layout_width="@dimen/login_input_width"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/login_icon_width"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon"/>
            <EditText
                android:id="@+id/login_password_input"
                android:layout_width="@dimen/login_input_width"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"/>
        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center">-->
<!--            -->
<!--            <ImageView-->
<!--                android:id="@+id/checkCode_imageView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content" />-->
<!--            <EditText-->
<!--                android:id="@+id/login_checkCode_input"-->
<!--                android:layout_width="@dimen/login_input_width"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text"-->
<!--                android:maxLines="1"-->
<!--                android:hint="@string/login_checkCode_hint"/>-->
<!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/login_to_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_register_text"
                android:textColor="@color/login_to_register_textColor"/>
            <Button
                android:id="@+id/login_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_text"
                android:layout_marginLeft="@dimen/login_confirm_button_marginLeft"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>